students/KuzhirVladislav/task_02/src/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web36
  namespace: app36
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web36
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web36
    spec:
      containers:
        - name: web
          image: vladkuzhyr/rsiot-app-v26:latest
          ports:
            - containerPort: 8014
          readinessProbe:
            httpGet:
              path: /health
              port: 8014
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8014
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
