students/KuzhirVladislav/task_02/src/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web36
  namespace: app36
spec:
  selector:
    app: web36
  ports:
    - port: 80
      targetPort: 8014
  type: ClusterIP
