students/KuzhirVladislav/task_02/src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web36
  namespace: app36
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: web36.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web36
                port:
                  number: 80
